# library-manager

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: file_handler.cpp  file_handler.h  library.cpp  library.h
src/models/: book.cpp  book.h  borrow_record.cpp  borrow_record.h
src/ui/: terminal_ui.cpp  terminal_ui.h  user_interface.h
